syntax = "proto3";

option php_namespace = "Grpc\\Product";
option php_metadata_namespace = "Grpc\\GPBMetadata";

package product;

service ProductService {
  rpc GetProduct (ProductRequest) returns (ProductResponse);
}

message ProductRequest {
  int64 product_id = 1;
}

message ProductResponse {
  int64 product_id = 1;
  string name = 2;
  float price = 3;
}
